# dotai-jisshu

./: .gitignore  README.md  pyproject.toml
notebooks/: pkpd_silico.ipynb
src/dotai_jisshu/: __init__.py  multi.py  runge.py
