[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotai_jisshu"
version = "1.0.0"
description = "scripts for excellent dotai jusshu"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "mizuno-group" }
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "matplotlib>=3.6",
]

[project.urls]
Repository = "https://github.com/mizuno-group/dotai-jisshu"

[tool.setuptools.packages.find]
where = ["src"]
